# compchem

./: .gitignore  README.md  build_ui.sh  how-to-start.md  how-to.ipynb  how-to.md  invenio.cfg  nrp  oarepo.yaml  pyproject.toml  requirements.txt  run.sh  variables
demo-data/: example_metadata.json  gmx-schema.json
docker/: Dockerfile.production  development.crt  development.key  docker-compose.yml  uwsgi.ini
experiments/: config.py  ext.py  proxies.py
experiments/files/: api.py  models.py
experiments/files/requests/: resolvers.py
experiments/models/: records.json  ui.json
experiments/records/: api.py  models.py
experiments/records/dumpers/: dumper.py  edtf.py
experiments/records/jsonschemas/: experiments-1.0.0.json
experiments/records/mappings/os-v2/experiments/: experiments-1.0.0.json  experiments_draft-1.0.0.json
experiments/records/requests/: resolvers.py
experiments/records/requests/delete_record/: types.py
experiments/records/requests/edit_record/: types.py
experiments/records/requests/publish_draft/: types.py
experiments/resources/files/: config.py  resource.py  ui.py
experiments/resources/records/: config.py  resource.py  ui.py
experiments/services/files/: config.py  schema.py  service.py  ui_schema.py
experiments/services/files/published/: config.py  service.py
experiments/services/records/: config.py  facets.py  permissions.py  results.py  schema.py  search.py  service.py  ui_schema.py
experiments/services/records/published/: config.py  service.py
experiments/translations/: messages.pot
experiments/translations/en/LC_MESSAGES/: messages.mo  messages.po
experiments/views/draft_files/: api.py  app.py
experiments/views/files/: api.py  app.py
experiments/views/records/: api.py  app.py
experiments/views/request_types/: api.py  app.py
experiments/views/requests/: api.py  app.py
fixtures/: catalogue.yaml  institutions.yaml
i18n/semantic-ui/translations/messages/: index.js
i18n/translations/: messages.mo  messages.pot
i18n/translations/en/LC_MESSAGES/: messages.mo  messages.po
models/: README.md  experiments-definitions.yaml  experiments-metadata.yaml  experiments-requests.yaml  experiments.yaml
sample_data/: catalogue.yaml  data.yaml  starter.yaml
sample_data/files/001/data/: 7.tpr  metadata.yaml
shared/: README.md  just_for_translations.py
shared/services/files/: __init__.py  processors.py
shared/workflows/: __init__.py  default_workflow_permissions.py  default_workflow_requests.py
ui/branding/semantic-ui/js/: branding.js
ui/branding/semantic-ui/less/: branding.less  theme.config  theme.less
ui/branding/semantic-ui/less/globals/: site.variables
ui/branding/templates/: footer.html  header.html  header_frontpage.html  searchbar.html
ui/branding/templates/base/: css.html  javascript.html
ui/experiments/: __init__.py  webpack.py
ui/titlepage/templates/: TitlePage.jinja
(+64 files in other folders)
